Fix footer missing on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -76,7 +76,8 @@ h1 {
 html {
     scroll-behavior: smooth;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    height: 100dvh;
     overflow: hidden;
     line-height: 1.5;
 }
@@ -88,7 +89,7 @@ body > div:last-of-type {
 }
 
 body {
-    height: 100vh;
+    height: inherit;
 }
 
 div,
